--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -60,7 +61,5 @@ if (project.hasProperty("myproject.properties")) {
 }
 
 dependencies {
-    //implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.google.android.material:material:1.4.0'
-    //implementation 'com.github.angads25:filepicker:1.1.1'
 }
